css/layout.css
/* ... */
/***** portfolios *****/

#portfolios {
    padding-top: 160px;
    padding-bottom: 160px;
    box-sizing: border-box;
}

#portfolios .decorated {
    margin: 0 auto 160px auto;
}

#portfolios .container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-auto-rows: minmax(200px, auto);
    grid-gap: 100px;
    gap: 100px;
    place-items: stretch;
}

#portfolios .item {
    display: flex;
    flex-direction: column;
}

#portfolios .item > a {
    display: flex;
    align-items: center;
    justify-content: center;

    flex: 1;
}

#portfolios .portfolio-logo {
    max-width: 100%;
}

#portfolios .portfolio-title {
    font-family: "Nanum Gothic", sans-serif;
    font-size: 19px;
    font-style: normal;
    font-weight: 700;
    line-height: 19px;
    letter-spacing: -0.04em;
    text-align: center;
}

#portfolios .portfolio-description {
    font-family: "Nanum Gothic", sans-serif;
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: 16px;
    letter-spacing: -0.04em;
    text-align: center;
}

@media screen and (max-width: 800px) {
    #portfolios {
        padding-top: 57px;
        padding-bottom: 57px;
    }

    #portfolios .decorated {
        margin: 0 auto 57px auto;
    }

    #portfolios .container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-auto-rows: minmax(77px, auto);
        grid-gap: 77px 29px;
        gap: 77px 29px;
        place-items: stretch;
    }

    #portfolios .portfolio-logo {
        max-width: 100%;
    }
}

/***** people *****/

#people {
    height: 100%;
    padding-top: 160px;
    padding-bottom: 160px;

    background-color: #f7f7f7;
}

#people .decorated {
    margin-bottom: 160px;
}

#people .container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#people .name {
    font-family: "Nanum Gothic", sans-serif;
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: 40px;
    letter-spacing: -0.04em;
    text-align: left;
}

#people .name > .eng-font {
    font-family: "Noto Sans", sans-serif;
    font-size: 37px;
    font-style: normal;
    font-weight: 600;
    line-height: 50px;
    letter-spacing: 0em;
    text-align: center;
}

#people .position {
    font-family: "Nanum Gothic", sans-serif;
    font-size: 30px;
    font-style: normal;
    font-weight: 700;
    line-height: 30px;
    letter-spacing: -0.04em;
    text-align: left;
}

#people .person > img {
    max-width: 100%;
}

@media screen and (max-width: 800px) {
    #people {
        height: auto;
        padding-top: 57px;
        padding-bottom: 57px;

        background-color: #f7f7f7;
    }

    #people .decorated {
        margin: 0 auto 57px auto;
    }

    #people .container {
        flex-direction: column;
    }

    #people .name {
        font-size: 20px;
        line-height: 20px;
        text-align: center;
    }

    #people .name > .eng-font {
        font-size: 19px;
        line-height: 26px;
        letter-spacing: -0.04em;
        text-align: center;
    }

    #people .position {
        font-size: 15px;
        line-height: 15px;
        text-align: center;
    }

    #people .person:first-child {
        margin-bottom: 57px;
    }
}

/***** alliance *****/

#alliance {
    height: 100%;

    /* background image */
    background-image: url("../assets/images/alliance@3x.png");

    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#alliance .filter {
    width: 100%;
    height: 100%;

    background-color: rgba(0, 0, 0, 0.3);
}

#alliance .slogan {
    font-family: "Noto Sans", sans-serif;
    font-size: 35px;
    font-style: normal;
    font-weight: 600;
    line-height: 48px;
    letter-spacing: 0em;
    text-align: left;

    color: white;
}

#alliance .description {
    font-family: "Nanum Gothic", sans-serif;
    font-size: 19px;
    font-style: normal;
    font-weight: 700;
    line-height: 30px;
    letter-spacing: -0.04em;
    text-align: left;

    color: white;
}

#alliance .description > .eng-font {
    font-family: "Noto Sans", sans-serif;
    font-size: 19px;
    font-style: normal;
    font-weight: 600;
    line-height: 30px;
    letter-spacing: 0em;
    text-align: left;
}

#alliance .positioner {
    position: relative;
    top: 100px;
    max-width: 1200px;
    margin: 0 auto;
}

#alliance .decorated {
    font-family: "Noto Sans", sans-serif;
    font-size: 25px;
    font-style: italic;
    font-weight: 500;
    line-height: 34px;
    letter-spacing: 0em;
    text-align: center;

    border-top: 1.2px solid white;
    border-bottom: 1.2px solid white;

    color: white;

    max-width: 150px;
}

#alliance .wrapper {
    position: relative;
    top: 50%;
    max-width: 1200px;
    margin: 0 auto;

    transform: translate(0, -100%);
}

#alliance img {
    position: relative;
    top: -80px;
    left: 750px;
}

@media screen and (max-width: 800px) {
    #alliance {
        background-position-x: -330px;
    }

    #alliance .decorated {
        margin: 0 auto 57px auto;
    }

    #alliance .slogan {
        font-size: 17px;
        line-height: 23px;
        text-align: center;
    }

    #alliance .description {
        font-size: 14px;
        line-height: 22px;
        text-align: center;
    }

    #alliance .description > .eng-font {
        font-size: 14px;
        line-height: 22px;
    }

    #alliance .wrapper {
        position: relative;
        top: 30%;
    }

    #alliance img {
        max-width: 80%;
        position: relative;
        top: 15%;
        left: 10%;
    }
}

/***** our view *****/

#our-view {
    padding-top: 190px;
    padding-bottom: 190px;
    box-sizing: border-box;
}

#our-view .decorated {
    margin: 0 auto 160px auto;
}
/* ... */

